cupcompiler/CupParser/src/java/Cup/CupParser.java
// Generated from CupParser.g4 by ANTLR 4.8
package Cup;

    import java.util.ArrayList;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CupParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VOID=1, INT=2, FLOAT=3, DOUBLE=4, CHAR=5, BOOL=6, LONG=7, CONST=8, RESTRICT=9, 
		CONTINUE=10, RETURN=11, BREAK=12, TYPEDEF=13, SIZEOF=14, EXTERN=15, STATIC=16, 
		ERROR=17, IDENTIFIER=18, STRING=19, BOOL_CONST=20, STRING_LITERAL=21, 
		INTEGER_CONST=22, FLOAT_CONST=23, CHAR_CONST=24, STRUCT=25, STACK=26, 
		QUEUE=27, VECTOR=28, UNQ_PTR=29, SHARED_PTR=30, QUESTION=31, LPAREN=32, 
		RPAREN=33, COLON=34, SEMICOLON=35, COMMA=36, LSQR=37, RSQR=38, LBRACE=39, 
		RBRACE=40, DOT=41, ARROW=42, PLUS=43, MINUS=44, STAR=45, SLASH=46, PERCENT=47, 
		LESS=48, GREATER=49, AMP=50, PIPE=51, CARET=52, TILDE=53, EXCLAIM=54, 
		PLUSPLUS=55, MINUSMINUS=56, LESSLESS=57, GREATERGREATER=58, AMPAMP=59, 
		PIPEPIPE=60, PERCENTEQUAL=61, PLUSEQUAL=62, MINUSEQUAL=63, SLASHEQUAL=64, 
		STAREQUAL=65, EQUALEQUAL=66, EQUAL=67, EXCLAIMEQUAL=68, LESSEQUAL=69, 
		GREATEREQUAL=70, AMPEQUAL=71, PIPEEQUAL=72, CARETEQUAL=73, GREATERGREATEREQUAL=74, 
		LESSLESSEQUAL=75, IF=76, ELSE=77, DO=78, WHILE=79, CASE=80, SWITCH=81, 
		DEFAULT=82, FOR=83, UNKNOWN=84, WHITESPACE=85, STR_UNT_NO_TEXT=86, STR_EOF_NO_TEXT=87, 
		STR_CHECK=88, DEFINE_IGNORE=89, INCLUDE_IGNORE=90, SL_COMMENT=91, COMMENT=92, 
		STR_END=93, END_SLASH=94, ESC_NULL_IN_STR=95, NULL_IN_STR=96, UNT_STR=97, 
		EOF_STR=98, EOF_in_commment=99, NEW_COMMENT=100, END_COMMENT=101, MATTER=102, 
		EOF_in_nested_comment=103, THIS_NEW_COMMENT=104, END_BEFORE_EMPTY_STACK=105, 
		END_THIS_COMMENT=106;
	public static final int
		RULE_program = 0, RULE_text = 1, RULE_functionOrDeclaration = 2, RULE_globalDeclaration = 3, 
		RULE_functionDefinition = 4, RULE_declaration = 5, RULE_simpleDeclaration = 6, 
		RULE_templateDeclaration = 7, RULE_dsDec = 8, RULE_dsArgs = 9, RULE_dataStructureName = 10, 
		RULE_initDeclaratorList = 11, RULE_initDeclarator = 12, RULE_pointer = 13, 
		RULE_typeQualifier = 14, RULE_declarator = 15, RULE_array_params = 16, 
		RULE_initializer = 17, RULE_assignmentExpression = 18, RULE_assignmentOperator = 19, 
		RULE_conditionalExpression = 20, RULE_unaryExpression = 21, RULE_unaryOperator = 22, 
		RULE_postfixExpression = 23, RULE_expression = 24, RULE_primaryExpression = 25, 
		RULE_constant = 26, RULE_argumentExpressionList = 27, RULE_logicalOrExpression = 28, 
		RULE_logicalAndExpression = 29, RULE_exclusiveOrExpression = 30, RULE_inclusiveOrExpression = 31, 
		RULE_andExpression = 32, RULE_equalityExpression = 33, RULE_relationalExpression = 34, 
		RULE_shiftExpression = 35, RULE_multiplicativeExpression = 36, RULE_additiveExpression = 37, 
		RULE_castExpression = 38, RULE_typeSpecifier = 39, RULE_parameterTypeList = 40, 
		RULE_functionParameterList = 41, RULE_formal = 42, RULE_blockItemList = 43, 
		RULE_blockItem = 44, RULE_functionCall = 45, RULE_statement = 46, RULE_compoundStatement = 47, 
		RULE_expressionStatement = 48, RULE_ifStatement = 49, RULE_whileStatement = 50, 
		RULE_forStatement = 51, RULE_forCondition = 52, RULE_jumpStatement = 53, 
		RULE_functionReturn = 54, RULE_declarationSpecifier = 55, RULE_storageClassSpecifier = 56, 
		RULE_declarationList = 57, RULE_nameList = 58, RULE_structDefinition = 59;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "text", "functionOrDeclaration", "globalDeclaration", "functionDefinition", 
			"declaration", "simpleDeclaration", "templateDeclaration", "dsDec", "dsArgs", 
			"dataStructureName", "initDeclaratorList", "initDeclarator", "pointer", 
			"typeQualifier", "declarator", "array_params", "initializer", "assignmentExpression", 
			"assignmentOperator", "conditionalExpression", "unaryExpression", "unaryOperator", 
			"postfixExpression", "expression", "primaryExpression", "constant", "argumentExpressionList", 
			"logicalOrExpression", "logicalAndExpression", "exclusiveOrExpression", 
			"inclusiveOrExpression", "andExpression", "equalityExpression", "relationalExpression", 
			"shiftExpression", "multiplicativeExpression", "additiveExpression", 
			"castExpression", "typeSpecifier", "parameterTypeList", "functionParameterList", 
			"formal", "blockItemList", "blockItem", "functionCall", "statement", 
			"compoundStatement", "expressionStatement", "ifStatement", "whileStatement", 
			"forStatement", "forCondition", "jumpStatement", "functionReturn", "declarationSpecifier", 
			"storageClassSpecifier", "declarationList", "nameList", "structDefinition"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'void'", "'int'", "'float'", "'double'", "'char'", "'bool'", null, 
			"'const'", "'restrict'", "'continue'", "'return'", "'break'", "'typedef'", 
			"'sizeof'", "'extern'", "'static'", null, null, "'string'", null, null, 
			null, null, null, "'struct'", "'stack'", "'queue'", "'vector'", "'unq_ptr'", 
			"'shared_ptr'", "'?'", "'('", "')'", "':'", "';'", "','", "'['", "']'", 
			"'{'", "'}'", "'.'", "'->'", "'+'", "'-'", "'*'", "'/'", "'%'", "'<'", 
			"'>'", "'&'", "'|'", "'^'", "'~'", "'!'", "'++'", "'--'", "'<<'", "'>>'", 
			"'&&'", "'||'", "'%='", "'+='", "'-='", "'/='", "'*='", "'=='", "'='", 
			"'!='", "'<='", "'>='", "'&='", "'|='", "'^='", "'>>='", "'<<='", "'if'", 
			"'else'", "'do'", "'while'", "'case'", "'switch'", "'default'", "'for'", 
			null, null, null, null, "'\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "VOID", "INT", "FLOAT", "DOUBLE", "CHAR", "BOOL", "LONG", "CONST", 
			"RESTRICT", "CONTINUE", "RETURN", "BREAK", "TYPEDEF", "SIZEOF", "EXTERN", 
			"STATIC", "ERROR", "IDENTIFIER", "STRING", "BOOL_CONST", "STRING_LITERAL", 
			"INTEGER_CONST", "FLOAT_CONST", "CHAR_CONST", "STRUCT", "STACK", "QUEUE", 
			"VECTOR", "UNQ_PTR", "SHARED_PTR", "QUESTION", "LPAREN", "RPAREN", "COLON", 
			"SEMICOLON", "COMMA", "LSQR", "RSQR", "LBRACE", "RBRACE", "DOT", "ARROW", 
			"PLUS", "MINUS", "STAR", "SLASH", "PERCENT", "LESS", "GREATER", "AMP", 
			"PIPE", "CARET", "TILDE", "EXCLAIM", "PLUSPLUS", "MINUSMINUS", "LESSLESS", 
			"GREATERGREATER", "AMPAMP", "PIPEPIPE", "PERCENTEQUAL", "PLUSEQUAL", 
			"MINUSEQUAL", "SLASHEQUAL", "STAREQUAL", "EQUALEQUAL", "EQUAL", "EXCLAIMEQUAL", 
			"LESSEQUAL", "GREATEREQUAL", "AMPEQUAL", "PIPEEQUAL", "CARETEQUAL", "GREATERGREATEREQUAL", 
			"LESSLESSEQUAL", "IF", "ELSE", "DO", "WHILE", "CASE", "SWITCH", "DEFAULT", 
			"FOR", "UNKNOWN", "WHITESPACE", "STR_UNT_NO_TEXT", "STR_EOF_NO_TEXT", 
			"STR_CHECK", "DEFINE_IGNORE", "INCLUDE_IGNORE", "SL_COMMENT", "COMMENT", 
			"STR_END", "END_SLASH", "ESC_NULL_IN_STR", "NULL_IN_STR", "UNT_STR", 
			"EOF_STR", "EOF_in_commment", "NEW_COMMENT", "END_COMMENT", "MATTER", 
			"EOF_in_nested_comment", "THIS_NEW_COMMENT", "END_BEFORE_EMPTY_STACK", 
			"END_THIS_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CupParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    String filename;
	    public void setFilename(String f){
	        filename = f;
	    }


	public CupParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TextContext t;
		public TerminalNode EOF() { return getToken(CupParser.EOF, 0); }
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CupParserListener ) ((CupParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CupParserListener ) ((CupParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CupParserVisitor ) return ((CupParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VOID) | (1L << INT) | (1L << FLOAT) | (1L << DOUBLE) | (1L << CHAR) | (1L << BOOL) | (1L << LONG) | (1L << CONST) | (1L << TYPEDEF) | (1L << EXTERN) | (1L << IDENTIFIER) | (1L << STRING) | (1L << STRUCT) | (1L << STACK) | (1L << QUEUE) | (1L << VECTOR) | (1L << UNQ_PTR) | (1L << SHARED_PTR))) != 0)) {
				{
				setState(120);
				((ProgramContext)_localctx).t = text();
				}
			}

			setState(123);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextContext extends ParserRuleContext {
		public FunctionOrDeclarationContext f;
		public List<FunctionOrDeclarationContext> functionOrDeclaration() {
			return getRuleContexts(FunctionOrDeclarationContext.class);
		}
		public FunctionOrDeclarationContext functionOrDeclaration(int i) {
			return getRuleContext(FunctionOrDeclarationContext.class,i);
		}
		public TextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_text; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CupParserListener ) ((CupParserListener)listener).enterText(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CupParserListener ) ((CupParserListener)listener).exitText(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CupParserVisitor ) return ((CupParserVisitor<? extends T>)visitor).visitText(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TextContext text() throws RecognitionException {
		TextContext _localctx = new TextContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_text);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(125);
				((TextContext)_localctx).f = functionOrDeclaration();
				}
				}
				setState(128); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VOID) | (1L << INT) | (1L << FLOAT) | (1L << DOUBLE) | (1L << CHAR) | (1L << BOOL) | (1L << LONG) | (1L << CONST) | (1L << TYPEDEF) | (1L << EXTERN) | (1L << IDENTIFIER) | (1L << STRING) | (1L << STRUCT) | (1L << STACK) | (1L << QUEUE) | (1L << VECTOR) | (1L << UNQ_PTR) | (1L << SHARED_PTR))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionOrDeclarationContext extends ParserRuleContext {
		public FunctionDefinitionContext fd;
		public DeclarationContext dec;
		public StructDefinitionContext sd;
		public GlobalDeclarationContext gdec;
		public FunctionDefinitionContext functionDefinition() {
			return getRuleContext(FunctionDefinitionContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public StructDefinitionContext structDefinition() {
			return getRuleContext(StructDefinitionContext.class,0);
		}
		public GlobalDeclarationContext globalDeclaration() {
			return getRuleContext(GlobalDeclarationContext.class,0);
		}
		public FunctionOrDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionOrDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CupParserListener ) ((CupParserListener)listener).enterFunctionOrDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CupParserListener ) ((CupParserListener)listener).exitFunctionOrDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CupParserVisitor ) return ((CupParserVisitor<? extends T>)visitor).visitFunctionOrDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionOrDeclarationContext functionOrDeclaration() throws RecognitionException {
		FunctionOrDeclarationContext _localctx = new FunctionOrDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_functionOrDeclaration);
		try {
			setState(134);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				((FunctionOrDeclarationContext)_localctx).fd = functionDefinition();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				((FunctionOrDeclarationContext)_localctx).dec = declaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(132);
				((FunctionOrDeclarationContext)_localctx).sd = structDefinition();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(133);
				((FunctionOrDeclarationContext)_localctx).gdec = globalDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalDeclarationContext extends ParserRuleContext {
		public DeclaratorContext dec;
		public Token eq;
		public InitializerContext in;
		public TerminalNode SEMICOLON() { return getToken(CupParser.SEMICOLON, 0); }
		public DeclaratorContext declarator() {
			return getRuleContext(DeclaratorContext.class,0);
		}
		public TerminalNode EQUAL() { return getToken(CupParser.EQUAL, 0); }
		public InitializerContext initializer() {
			return getRuleContext(InitializerContext.class,0);
		}
		public GlobalDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CupParserListener ) ((CupParserListener)listener).enterGlobalDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CupParserListener ) ((CupParserListener)listener).exitGlobalDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CupParserVisitor ) return ((CupParserVisitor<? extends T>)visitor).visitGlobalDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalDeclarationContext globalDeclaration() throws RecognitionException {
		GlobalDeclarationContext _localctx = new GlobalDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_globalDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			((GlobalDeclarationContext)_localctx).dec = declarator(0);
			setState(137);
			((GlobalDeclarationContext)_localctx).eq = match(EQUAL);
			setState(138);
			((GlobalDeclarationContext)_localctx).in = initializer();
			setState(139);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
